# hello-pi

./: .gitmodules  LICENSE  README.md  blink.py  flashy.py
MIDI98/: README.md  package.json
MIDI98/src/: manifest.json
audio_light_show/: Cargo.toml
audio_light_show/src/: aubionotes.rs  aubiopitch.rs  freq_file.rs  jukebox.rs  main.rs  music_pin.rs
breadamp-ui/: .gitignore  README.md  package-lock.json  package.json  preact.config.js  size-plugin.json  tsconfig.json  webpack.config.js
breadamp-ui/src/: index.js  manifest.json
breadamp-ui/test/: Songs-test.js  Songs-test.js.map  Songs-test.tsx  setup.js  setup.js.map  setup.ts
breadamp-ui/tests/: header.test.js
doc/: rgb.fzz  so_color.fzz
freq_to_note/: Cargo.toml
freq_to_note/src/: lib.rs
fritz/: button.fzz
hello_midi/: Cargo.toml  README.md
helpers/: gpio_unexport.sh
midi_light_show/: Cargo.toml  README.md  Settings.toml  chicken_scratch.md
midi_light_show/doc/: midi_light_show.fzz  midi_light_show_extended.fzz
midi_light_show/examples/: tone_test.rs
midi_light_show/resources/: rach3.mid
midi_light_show/src/: channels.rs  controls.rs  lib.rs  light.rs  main.rs  song.rs
pi_control/: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  Settings.toml
pi_control/src/: main.rs  model.rs  publish.rs  redis_publish.rs
pi_control/src/support_gfx/: mod.rs
pi_service/: Cargo.toml  Dockerfile  README.md  Settings.toml
py/: blink3.py  button.py  camera_still.py  flashy.py  push_button.py  rgb.py
rs/: .gitignore  Cargo.toml  README.md
rs/src/: button.rs  (+5 more)
scripts/: gpio_light_up.sh
(+26 files in other folders)
