[package]
name = "audio_light_show"
version = "0.1.0"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.11.0"
music_pin = { git = "https://github.com/Terkwood/hello-pi" }
env_logger = "0.7.1"
log = "0.4.8"
