[package]
name = "pi_control"
version = "0.0.1"
authors = ["Terkwood <<>>"]
description = "Control panel for Raspberry Pi"
license = "MIT"
publish = false

[dependencies]
crossbeam-channel = "0.2"
gfx = "0.17"
gfx_window_glutin = "0.22"
glutin = "0.14"
imgui = { version = "0.0.19-pre", path = "./imgui-rs" }
imgui-gfx-renderer = { version = "0.0.19-pre", path = "./imgui-rs/imgui-gfx-renderer" }
imgui-sys = { version = "0.0.19-pre", path = "./imgui-rs/imgui-sys", features = ["gfx", "glium"] }
redis = "0.8.0"
